--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>First example</title>
 </head>
 <body>
-    <div>Hello World from Uzma</div>
+    <div>Hello World from <s>Uzma</s>Noorani</div>
 </body>
 </html>
